# straightup_LookingForPR

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  plan.md  pyproject.toml
app/: config.py
app/bot/: app.py  digest.py  group_post.py  handlers_parent.py  ics_ingest.py  med_timing.py  mentions.py  onboarding.py
app/briefing/: compile.py  render.py  storage.py
app/db/: appointments.py  audio_cache.py  client.py  conversations.py  doses.py  events.py  families.py  medication.py  rotation.py  setup_sessions.py  tokens.py  users.py
app/llm/: classify.py  client.py  decide.py  memory.py  prompts.py
app/scheduler/: jobs.py  scheduler.py
app/server/: admin.py  webhook.py
app/voice/: send.py  stt.py  tts.py
archive/: second-shift.md
scripts/: fire_checkin.py  fire_demo.py  prewarm_audio.py  seed_history.py
supabase/: schema.sql  seed.sql
